# ChangeLog for media-sound/noteedit
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/ChangeLog,v 1.10 2004/07/19 22:25:13 eradicator Exp $

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/noteedit-2.6.2-gcc34.patch:
  Gcc-3.4 fixes.  Added to ~amd64.

  12 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  noteedit-2.6.2.ebuild:
  ~sparc

*noteedit-2.6.2 (18 Jun 2004)

  18 Jun 2004; Jon Hood <squinky86@gentoo.org> -noteedit-2.5.0.ebuild,
  noteedit-2.5.3.ebuild, +noteedit-2.6.2.ebuild:
  version bump; ebuild cleanups; stable on x86; thanks Till Maas
  <opensource@gmx.net>

*noteedit-2.5.3 (22 May 2004)

  22 May 2004; Jon Hood <squinky86@gentoo.org> -noteedit-2.3.2.ebuild,
  +noteedit-2.5.3.ebuild:
  version bump, closes #50491, ebuild cleanups

  17 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  noteedit-2.5.0.ebuild:
  Stable x86.

  19 Mar 2004; David Holm <dholm@gentoo.org> noteedit-2.5.0.ebuild:
  Added to ~ppc.

*noteedit-2.5.0 (18 Mar 2004)

  18 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  noteedit-2.3.2.ebuild, noteedit-2.5.0.ebuild:
  Version bump for bug #44644.

*noteedit-2.3.2 (28 Sep 2003)

  28 Sep 2003; jje <jje@gentoo.org> noteedit-2.3.2.ebuild:
  Intial revision.
  
  Submitted by : peter.wilks@t-online.de
