@@ -1,7 +1,7 @@
-MD5 3cc39b14c2229b190c7f74e58712ecea ChangeLog 690
+MD5 4faed3edd38ce5ff0604082de2e75caa ChangeLog 800
 MD5 c18da1a6f9e62d6b1f846a207dfd13ba knob-1.2.ebuild 475
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 3b4432a59fb14b04f512907b9d7435d0 knob-1.2-r1.ebuild 564
+MD5 1234a0bb06da8133a8929f618e84cf21 knob-1.2-r1.ebuild 565
 MD5 a56cfa065796d6825807406e890476e5 files/digest-knob-1.2 60
-MD5 e19a414c89ffe94dfd4cae80e1da4248 files/knob-1.2-fPIC.patch 375
 MD5 a56cfa065796d6825807406e890476e5 files/digest-knob-1.2-r1 60
+MD5 e19a414c89ffe94dfd4cae80e1da4248 files/knob-1.2-fPIC.patch 375
