@@ -1,7 +1,7 @@
-MD5 9783be44f3d02c7c39f0c1d4ebe1c139 madman-0.93.ebuild 1757
 MD5 a2442c0843e27e58a408717bcb702cee madman-0.91.1.ebuild 733
-MD5 93181bce2ca2eb4b7a97e37fc79f6d27 ChangeLog 1081
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 619eaa44f6cc47b3f9c27a0f4f7fb0f8 files/madman-0.93-gcc34.patch 408
-MD5 552d34016df5811e777e48617ac62c35 files/digest-madman-0.93 63
+MD5 99a35fb463a3e47669d41aecd9e07196 ChangeLog 1184
+MD5 96d7ffcfaeaff6d086ca3aa8f03b28ed madman-0.93.ebuild 1739
 MD5 cf5b2760fca097c0c04b4566fad931ce files/digest-madman-0.91.1 65
+MD5 552d34016df5811e777e48617ac62c35 files/digest-madman-0.93 63
+MD5 619eaa44f6cc47b3f9c27a0f4f7fb0f8 files/madman-0.93-gcc34.patch 408
