@@ -1,10 +1,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/noteedit-2.6.2.ebuild,v 1.4 2004/07/19 22:25:13 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/noteedit-2.6.2.ebuild,v 1.5 2004/09/03 09:57:56 eradicator Exp $
 
 IUSE="arts"
 
-inherit kde-functions kde eutils
+inherit kde-functions kde eutils flag-o-matic
 
 DESCRIPTION="Musical score editor (for Linux)."
 HOMEPAGE="http://rnvs.informatik.tu-chemnitz.de/~jan/noteedit/"
@@ -12,7 +12,7 @@ SRC_URI="http://rnvs.informatik.tu-chemnitz.de/cgi-bin/nph-sendbin.cgi/~jan/${PN
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~amd64"
+KEYWORDS="x86 ~ppc sparc amd64"
 
 DEPEND="arts? ( kde-base/kdemultimedia )
 	media-libs/tse3"
