@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/noteedit
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/ChangeLog,v 1.10 2004/07/19 22:25:13 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/noteedit/Attic/ChangeLog,v 1.11 2004/09/03 09:57:56 eradicator Exp $
+
+  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  noteedit-2.6.2.ebuild:
+  Stable amd64, sparc, x86.  Added inherit flag-o-matic.
 
   19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
   +files/noteedit-2.6.2-gcc34.patch:
